[package]
authors = ["Mohsen Zainalpour <zainalpour@gmail.com>"]
edition = "2021"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[features]
default = ["gmf-monoio"]
gmf-monoio = ["gmf/monoio-runtime"]
gmf-tokio = ["gmf/tokio-runtime"]

[[bin]]
name = "helloworld-gmf-server"
path = "src/helloworld-gmf/server.rs"
required-features = ["gmf-monoio"]

[[bin]]
name = "helloworld-gmf-tokio-server"
path = "src/helloworld-gmf/tokio_server.rs"
required-features = ["gmf-tokio"]

[[bin]]
name = "helloworld-gmf-client"
path = "src/helloworld-gmf/client.rs"

[[bin]]
name = "helloworld-tonic-server"
path = "src/helloworld-tonic/server.rs"

[[bin]]
name = "helloworld-tonic-client"
path = "src/helloworld-tonic/client.rs"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
gmf = { path = "../gmf", default-features = false }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
criterion = "0.5"
