[package]
name = "gmf"
version = "2.0.0"
edition = "2021"
authors = ["Mohsen Zainalpour <zainalpour@gmail.com>"]
description = "A runtime-agnostic, high-performance gRPC server framework using thread-per-core architecture."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/EtaCassiopeia/gmf"
keywords = ["protobuf", "grpc", "futures", "async", "thread-per-core"]
categories = ["asynchronous", "network-programming", "web-programming"]

[features]
default = ["monoio-runtime"]
monoio-runtime = ["dep:monoio", "dep:monoio-compat", "dep:libc"]
glommio-runtime = ["dep:glommio", "dep:futures-lite"]
tokio-runtime = ["dep:tokio", "dep:hyper-util", "dep:libc", "dep:socket2"]

[dependencies]
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
hyper = { version = "1", features = ["server", "http2"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
tower = "0.5"
tower-service = "0.3"
pin-project = "1.1"
num_cpus = "1"
tracing = "0.1"
thiserror = "2"

# monoio runtime
monoio = { version = "0.2", optional = true }
monoio-compat = { version = "0.2", optional = true, features = ["hyper"] }

# glommio runtime (Linux only)
glommio = { version = "0.9", optional = true }
futures-lite = { version = "2", optional = true }

# tokio runtime
tokio = { version = "1", optional = true, features = ["rt", "net", "sync", "macros"] }
hyper-util = { version = "0.1", optional = true, features = ["server-auto", "tokio"] }
libc = { version = "0.2", optional = true }
socket2 = { version = "0.5", optional = true, features = ["all"] }
